# FreeMajor

./: CMakeLists.txt  vcpkg.json
.github/workflows/: all-platforms  all-platforms.yml  cmake-multi-platform.yml  cross-build.yml  multi-platform.yml  windows-cross.yml
sources/: main.cc
